add discord bot

--- a/pipelines/box-builder/Jenkinsfile
+++ b/pipelines/box-builder/Jenkinsfile
@@ -1,21 +1,21 @@
 pipeline {
     agent {
         dockerfile {
-            filename 'pipelines/template-creator/Dockerfile'
+            filename 'pipelines/box-builder/Dockerfile'
         }
     }
     parameters {
         string(name: 'PROXMOX_IP', defaultValue: 'cyberops2.pizzasec.com', description: 'ProxMox IP address')
         string(name: 'PROXMOX_NODE', defaultValue: 'cyberops2', description: 'ProxMox to build the box on')
         string(name: 'TEMPLATE', defaultValue: 'ubuntu-22', description: 'Name of the template to use')
-        string(name: 'ROLE', defaultValue: 'patron', description: 'Why is this box being built')
-        string(name: 'BRANCH', defaultValue: 'None', description: 'If this is associated with a git branch, assign it')
         choice(name: 'CORES', choices: ['2', '4', '8'], description: 'Number of cores that will be allocated to the VM')
         choice(name: 'MEMORY', choices: ['2048', '4096', '8192'], description: 'Memory allocation for the VM in MB')
+        string(name: 'STORAGE', defaultValue: '20', description: 'Storage for the VM in GB')
+        string(name: 'ROLE', defaultValue: 'patron', description: 'Why is this box being built')
+        string(name: 'BRANCH', defaultValue: 'None', description: 'If this is associated with a git branch, assign it')
     }
     environment {
         PROXMOX_API_CREDS   = credentials('proxmox-api-token')
-        PROXMOX_SSH_CREDS   = credentials('root-proxmox')
         PROXMOX_LOW_VMID    = "400"
         PROXMOX_HIGH_VMID   = "600"
     }
@@ -28,6 +28,9 @@ pipeline {
                     }
                     if (!params.BRANCH.matches('^[a-zA-Z0-9._-]+$')) {
                         error("Invalid BRANCH parameter. Only letters, numbers, '.', '_' and '-' are allowed.")
+                    }
+                    if (!params.STORAGE.isInteger() || params.STORAGE.toInteger() > 200) {
+                        error("Invalid STORAGE parameter. It must be a number and less than or equal to 200.")
                     }
                 }
             }
@@ -46,15 +49,22 @@ pipeline {
         
         stage('Build Box') {
             steps {
-                withCredentials([sshUserPrivateKey(credentialsId: 'ssh-key', keyFileVariable: 'SSH_KEY')]) {
-                    script {
-                        dir('pipelines/box-builder') {
-                            def token_name = PROXMOX_API_CREDS.split(':')[0]
-                            def token_secret = PROXMOX_API_CREDS.split(':')[1]
-                            def proxmox_user = PROXMOX_SSH_CREDS.split(':')[0]
-                            def proxmox_password = PROXMOX_SSH_CREDS.split(':')[1]
-                            def template_ssh_key = "${SSH_KEY}"
-                        }
+                script {
+                    dir('pipelines/box-builder') {
+                        def token_name = PROXMOX_API_CREDS.split(':')[0]
+                        def token_secret = PROXMOX_API_CREDS.split(':')[1]
+                        sh """
+                            python box-builder.py \
+                                --proxmox_ip    ${params.PROXMOX_IP} \
+                                --proxmox_node  ${params.PROXMOX_NODE} \
+                                --token_name    ${token_name} \
+                                --token_secret  ${token_secret} \
+                                --low_vmid      ${PROXMOX_LOW_VMID} \
+                                --high_vmid     ${PROXMOX_HIGH_VMID}
+                                --template_name ${params.TEMPLATE} \
+                                --
+                                
+                        """
                     }
                 }
             }
