--- a/pipelines/template-creator/Jenkinsfile
+++ b/pipelines/template-creator/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
     parameters {
         string(name: 'PROXMOX_IP', defaultValue: 'cyberops2.pizzasec.com', description: 'ProxMox IP address')
         string(name: 'PROXMOX_NODE', defaultValue: 'cyberops2', description: 'ProxMox to build the templates on')
+        string(name: 'CONCURRENCY', defaultValue: '5', description: 'Max number of templates to build at once')
     }
     environment {
         PROXMOX_API_CREDS = credentials('proxmox-api-token')
@@ -46,7 +47,8 @@ pipeline {
                                     --token_secret ${token_secret} \
                                     --user ${proxmox_user} \
                                     --password ${proxmox_password} \
-                                    --template_ssh_key ${template_ssh_key}
+                                    --template_ssh_key ${template_ssh_key} \
+                                    --concurrency ${params.CONCURRENCY}
                             """
                         }
                     }
