--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -19,11 +19,13 @@ pipeline {
         string(name: 'ROLE', defaultValue: 'jenkins', description: 'Why is this box being built')
         string(name: 'BRANCH', defaultValue: 'master', description: 'If this is associated with a git branch, assign it')
         choice(name: 'NETWORK', choices: ['vmbr0', 'vmbr1', 'patron'], description: 'Network to place the VM on')
+        string(name: 'JENKINS_URL', defaultValue: 'http://jenkins.pizzasec.com:8080', description: 'URL of Jenkins')
+        string(name: 'AGENT_NAME', defaultValue: 'main', description: 'Name of the new agent')
+        string(name: 'AGENT_EXECUTORS', defaultValue: '10', description: 'Number of executors for the new agent')
     }
     environment {
-        PROXMOX_API_CREDS   = credentials('proxmox-api-token')
-        PROXMOX_LOW_VMID    = "400"
-        PROXMOX_HIGH_VMID   = "600"
+        JENKINS_API_USER    = credentials('JENKINS_API_TOKEN')
+        SECRET_FILE         = "TEMP_SECRET.txt"
     }
     stages {
         stage('Parameter Validation') {
@@ -52,7 +54,28 @@ pipeline {
                 ])
             }
         }
-        
+        stage('Configure Agent On Master') {
+            steps {
+                script {
+                    dir('pipelines/jenkins-agent-builder') {
+                        def api_user = JENKINS_API_USER.split(':')[0]
+                        def api_token = JENKINS_API_USER.split(':')[1]
+                        sh """
+                            echo "Set up agent on controller"
+                            python generate-agent.py \
+                                --jenkins-url   ${params.JENKINS_URL} \
+                                --agent-name    ${params.AGENT_NAME} \
+                                --username      ${api_user} \
+                                --api-token     ${api_token} \
+                                --label         ${params.NETWORK} \
+                                --executors     ${params.AGENT_EXECUTORS} \
+                                --secret-file   ${SECRET_FILE}
+                        """
+                        stash name: 'agent-secrets', includes: SECRET_FILE
+                    }
+                }
+            }
+        }
         stage('Build Box') {
             steps {
                 script {
@@ -78,6 +101,14 @@ pipeline {
                         selector: specific("${buildbox.number}"),
                         filter: 'vm_metadata.json'
                     )
+                }
+            }
+        }
+        stage('Provision Jenkins Agent') {
+            steps {
+                script {
+                    unstash 'agent-secrets'
+                    sh "cat ${SECRET_FILE}"
                 }
             }
         }
