--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -100,7 +100,7 @@ pipeline {
                         selector: specific("${buildbox.number}"),
                         filter: 'vm_metadata.json'
                     )
-                    stash name: 'vm-metadata', includes: vm_metadata.json
+                    stash name: 'vm-metadata', includes: "vm_metadata.json"
                 }
             }
         }
