--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -27,6 +27,9 @@ pipeline {
         JENKINS_API_USER    = "jenkins"
         JENKINS_API_TOKEN   = credentials('JENKINS_API_TOKEN')
         SECRET_FILE         = "TEMP_SECRET.txt"
+        // This needs to be added by hand to the credential store
+        VM_SSH_KEY          = "internal-ssh-key"
+        SSH_KEY_FILE        = "internal_ssh_key.pem"
     }
     stages {
         stage('Parameter Validation') {
@@ -107,10 +110,25 @@ pipeline {
         stage('Provision Jenkins Agent') {
             steps {
                 script {
+                    withCredentials([sshUserPrivateKey(credentialsId: $VM_SSH_KEY, keyFileVariable: 'SSH_KEY_FILE')]) {
+                        sh """
+                            echo "Writing SSH private key to ${SSH_KEY_FILE}"
+                            cp \$SSH_KEY_FILE ${SSH_KEY_FILE}
+                            chmod 600 ${SSH_KEY_FILE}
+                        """
+                    }
                     unstash 'agent-secrets'
                     sh "cat ${SECRET_FILE}"
                     unstash 'vm-metadata'
                     sh "cat vm_metadata.json"
+                    sh """
+                        python your-python-script.py \
+                            --secret-file ${SECRET_FILE} \
+                            --metadata-file vm_metadata.json \
+                            --ssh-key-file ${SSH_KEY_FILE} \
+                            --scp-dir "pipelines/jenkins-agent-builder/agent-configs" \
+                            --agent-name ${params.AGENT_NAME}
+                    """
                 }
             }
         }
