--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -114,7 +114,9 @@ pipeline {
                         unstash 'vm-metadata'
                         withCredentials([sshUserPrivateKey(credentialsId: 'internal-ssh-key', keyFileVariable: 'SSH_KEY_FILE')]) {
                             sh """
-                                sleep 60
+                                echo "Key file location: ${SSH_KEY_FILE}"
+                                ls -l ${SSH_KEY_FILE}
+                                cat ${SSH_KEY_FILE}
                                 chmod 600 ${SSH_KEY_FILE}
                                 python deploy-agent.py \
                                     --secret-file ${SECRET_FILE} \
