--- a/pipelines/jenkins-agent-builder/Jenkinsfile
+++ b/pipelines/jenkins-agent-builder/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         string(name: 'ROLE', defaultValue: 'jenkins', description: 'Why is this box being built')
         string(name: 'BRANCH', defaultValue: 'master', description: 'If this is associated with a git branch, assign it')
         choice(name: 'NETWORK', choices: ['vmbr0', 'vmbr1', 'patron'], description: 'Network to place the VM on')
-        string(name: 'JENKINS_URL', defaultValue: 'http://jenkins.pizzasec.com:8080', description: 'URL of Jenkins')
+        string(name: 'JENKINS_HOSTNAME', defaultValue: 'jenkins.pizzasec.com', description: 'URL of Jenkins')
         string(name: 'AGENT_NAME', defaultValue: 'main', description: 'Name of the new agent')
         string(name: 'AGENT_EXECUTORS', defaultValue: '10', description: 'Number of executors for the new agent')
     }
@@ -64,7 +64,7 @@ pipeline {
                         sh """
                             echo "Set up agent on controller"
                             python generate-agent.py \
-                                --jenkins-url   ${params.JENKINS_URL} \
+                                --jenkins-url   "http://${params.JENKINS_HOSTNAME}:8080" \
                                 --agent-name    ${params.AGENT_NAME} \
                                 --username      ${JENKINS_API_USER} \
                                 --api-token     ${JENKINS_API_TOKEN} \
@@ -125,7 +125,7 @@ pipeline {
                                     --ssh-key-file crap.pem \
                                     --scp-dir "agent-configs" \
                                     --agent-name ${params.AGENT_NAME} \
-                                    --master-ip ${params.PROXMOX_IP}
+                                    --master-ip ${params.JENKINS_HOSTNAME}
                             """
                         }
                     }
