--- a/pipelines/docker-bake/Jenkinsfile
+++ b/pipelines/docker-bake/Jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        label 'main'
+    }
     parameters {
         string(name: 'REPO_URL', defaultValue: 'https://github.com/your-repo/your-repo.git', description: 'Path to the repo')
         string(name: 'BAKE_FILE_PATH', defaultValue: "path/to/docker-bake.hcl", description: 'Path to docker bake file')
@@ -18,9 +20,13 @@ pipeline {
         stage('Build Docker Images using docker-bake.hcl') {
             steps {
                 script {
-                    /sh "docker login ${REGISTRY}"
+                    withCredentials([usernamePassword(credentialsId: 'docker-registry-creds', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+                        sh "echo ${DOCKER_PASSWORD} | docker login ${REGISTRY} --username ${DOCKER_USERNAME} --password-stdin"
+                    }
+                    sh 'ls -la'
+                    
                     sh 'docker buildx create --use || true'
-                    sh "docker buildx bake -f ${params.DOCKER_BAKE_FILE}"
+                    sh "docker buildx bake -f ${params.BAKE_FILE_PATH}"
                 }
             }
         }
@@ -28,7 +34,7 @@ pipeline {
         stage('Push Images to Registry') {
             steps {
                 script {
-                    sh "docker buildx bake -f ${params.DOCKER_BAKE_FILE} --push"
+                    sh "docker buildx bake -f ${params.BAKE_FILE_PATH} --push"
                 }
             }
         }
